feat: implementando formulário do front-end

--- a/src/app/component/main/main.component.html
+++ b/src/app/component/main/main.component.html
@@ -1,36 +1,101 @@
-<form action="">
-    <img src="./assets/clients.png" alt="Client"><br>
-    <input type="text" id="companyName" name="companyName" placeholder="Nome a Empresa" class="form-control" [(ngModel)]="client.companyName">
-    <input type="text" id="identificationNumber" name="identificationNumber" placeholder="CNPJ" class="form-control" [(ngModel)]="client.identificationNumber">
-    <input type="email" id="email" name="email" placeholder="E-mail" class="form-control" [(ngModel)]="client.email">
-    <input type="text" id="companySector" name="companySector" placeholder="Setor" class="form-control" [(ngModel)]="client.companySector">
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-6 bg-light border p-4">
+            <form #myForm="ngForm" class="bg-color-brow-light border p-4 rounded ">
+                <div class="text-center mb-4">
+                    <img src="./assets/clients.png" alt="Client" class="img-fluid">
+                    <h4>For companies that take care of large companies</h4>
+                </div>
+                <div class="mb-3">
+                    <input type="text" id="companyName" name="companyName" placeholder="Nome da Empresa"
+                        class="form-control" [(ngModel)]="client.companyName" #companyName="ngModel" required>
+                    <div *ngIf="companyName.touched || myForm.submitted">
+                        <div *ngIf="companyName.errors?.['required']" class="text-danger">
+                            O nome da empresa é obrigatório.
+                        </div>
+                    </div>
+                </div>
 
-    <input  *ngIf="btnRegistration" type="button" value="Cadastrar" class="btn btn-primary" (click)="create()">
-    <input  *ngIf="btnAlter" type="button" value="Alterar" class="btn btn-warning" (click)="alterClient()"> 
-    <input  *ngIf="btnRemove" type="button" value="Remover" class="btn btn-danger" (click)="remove()">
-    <input  *ngIf="btnCancel" type="button" value="Cancelar" class="btn btn-secondary">
-</form>
+                <div class="mb-3">
+                    <input type="text" id="identificationNumber" name="identificationNumber" placeholder="CNPJ"
+                        class="form-control" [(ngModel)]="client.identificationNumber" #identificationNumber="ngModel"
+                        mask="00.000.000/0000-00" required>
+                    <div *ngIf="identificationNumber.touched || myForm.submitted">
+                        <div *ngIf="identificationNumber.errors?.['required']" class="text-danger">
+                            O CNPJ é obrigatório.
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <input type="email" id="email" name="email" placeholder="E-mail" class="form-control"
+                        [(ngModel)]="client.email" #email="ngModel" required>
+                    <div *ngIf="email.touched || myForm.submitted">
+                        <div *ngIf="email.errors?.['required']" class="text-danger">
+                            O e-mail é obrigatório.
+                        </div>
+                        <div *ngIf="email.errors?.['email']" class="text-danger">
+                            Por favor, insira um e-mail válido.
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-4">
+                    <input type="text" id="companySector" name="companySector" placeholder="Setor" class="form-control"
+                        [(ngModel)]="client.companySector" #companySector="ngModel" required>
+                    <div *ngIf="companySector.touched || myForm.submitted">
+                        <div *ngIf="companySector.errors?.['required']" class="text-danger">
+                            O setor é obrigatório.
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <input *ngIf="btnRegistration" type="submit" value="Cadastrar" class="btn btn-primary"
+                        (click)="create(myForm)">
+                    <input *ngIf="btnAlter" type="button" value="Alterar" class="btn btn-warning"
+                        (click)="alterClient(myForm)">
+                    
+                    <input *ngIf="btnCancel" type="button" value="Cancelar" class="btn btn-secondary">
+                </div>
+            </form>
+        </div>
 
-<table class="table" *ngIf="table">
-    <thead>
-        <tr>
-            <th>Selecionar</th>
-            <th>#</th>
-            <th>Empresa</th>
-            <th>CNPJ</th>
-            <th>E-mail</th>
-            <th>Setor</th>
-        </tr>
-    </thead>
-    
-    <tbody>
-        <tr *ngFor="let client of clients; index as i" >
-            <td><button class="btn btn btn-success" (click)="selectClient(i)">Selecionar</button></td>
-            <td>{{ i+1}}</td>
-            <td>{{ client.id }}</td>
-            <td>{{ client.companyName }}</td>
-            <td>{{ client.identificationNumber }}</td>
-            <td>{{ client.companySector }}</td>
-        </tr>
-    </tbody>
-</table>
+        
+        <div class="col-md-6 ">
+            <table class="table table-striped mt-5" *ngIf="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th colspan="2">Ação</th>
+                        <th>#</th>
+                        <th>Company Name</th>
+                        <th>CNPJ</th>
+                        <th>E-mail</th>
+                        <th>Setor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let client of clients; index as i">
+                        <td>
+                            <input type="checkbox" name="ids" id="ids" class="mt-3" (click)="addArray(client.id)">
+                        </td>
+                        <td>
+                            <button class="btn btn-transparent" (click)="selectClient(i)">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" fill="currentColor"
+                                    class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                    <path
+                                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                    <path fill-rule="evenodd"
+                                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                                </svg>
+                            </button>
+                        </td>
+                        <td>{{ i+1 }}</td>
+                        <td>{{ client.companyName }}</td>
+                        <td>{{ client.email }}</td>
+                        <td>{{ client.identificationNumber }}</td>
+                        <td>{{ client.companySector }}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <input *ngIf="btnRemove" type="button" value="Remover" class="btn btn-danger" (click)="remove()">
+        </div>
+    </div>
+</div>
